--- a/Models/-VC/2021.09.28_Diff-VC.md
+++ b/Models/-VC/2021.09.28_Diff-VC.md
@@ -1216,3 +1216,144 @@ Although several attempts have been recently made to reduce the number of DPM in
 In contrast, our approach generalizes to all popular kinds of DPMs and has a strong connection with likelihood maximization.
 
 This paper has the following structure: in Section [sec:vc_model](#sec:vc_model) we present a one-shot many-to-many VC model and describe DPM it relies on; Section [sec:ml_inference](#sec:ml_inference) introduces a novel DPM sampling scheme and establishes its connection with likelihood maximization; the experiments regarding voice conversion task as well as those demonstrating the benefits of the proposed sampling scheme are described in Section [sec:exp](#sec:exp); we conclude in Section [sec:outro](#sec:outro).
+
+## 2·Voice Conversion Diffusion Model
+
+\label{sec:vc_model}
+
+As with many other VC models, the one we propose belongs to the family of autoencoders.
+
+In fact, any conditional DPM with data-dependent prior (i.e. terminal distribution of forward diffusion) can be seen as such: forward diffusion gradually adding Gaussian noise to data can be regarded as encoder while reverse diffusion trying to remove this noise acts as a decoder.
+
+DPMs are trained to minimize the distance (expressed in different terms for different model types) between the trajectories of forward and reverse diffusion processes thus, speaking from the perspective of autoencoders, minimizing reconstruction error.
+
+Data-dependent priors have been proposed by [^Popov2021Grad-TTS] and [^Lee2021PriorGrad], and we follow the former paper due to the flexibility of the continuous DPM framework used there.
+
+Our approach is summarized in Figure~[pic:main](#pic:main).
+
+![](images/scheme.png)
+
+<a id="pic:main">VC model training and inference. $Y$ stands for the training mel-spectrogram at training and the target mel-spectrogram at inference.
+
+Speaker conditioning in the decoder is enabled by the speaker conditioning network $g_{t}(Y)$ where $Y=\{Y_{t}\}_{t\in[0, 1]}$ is the whole forward diffusion trajectory starting at $Y_{0}$.
+
+Dotted arrows denote operations performed only at training.</a>
+
+### Encoder
+
+\label{subsec:encoder}
+
+We choose average phoneme-level mel features as speaker-independent speech representation.
+
+To train the encoder to convert input mel-spectrograms into those of "average voice'', we take three steps: (i) first, we apply Montreal Forced Aligner [^McAuliffe2017Montreal] to a large-scale multi-speaker LibriTTS dataset [^Zen2019LibriTTS] to align speech frames with phonemes;
+(ii) next, we obtain average mel features for each particular phoneme by aggregating its mel features across the whole LibriTTS dataset;
+(iii) the encoder is then trained to minimize mean square error between output mel-spectrograms and ground truth "average voice'' mel-spectrograms (i.e. input mel-spectrograms where each phoneme mel feature is replaced with the average one calculated on the previous step).
+
+The encoder has exactly the same Transformer-based architecture used in Grad-TTS [^Popov2021Grad-TTS] except that its inputs are mel features rather than character or phoneme embeddings.
+
+Note that unlike Grad-TTS the encoder is trained separately from the decoder described in the next section.
+
+### Decoder
+
+\label{subsec:decoder}
+
+Whereas the encoder parameterizes the terminal distribution of the forward diffusion (i.e. the prior), the reverse diffusion is parameterized with the decoder.
+
+Following [^Song2021Score-Based] we use It\^o calculus and define diffusions in terms of stochastic processes rather than discrete-time Markov chains.
+
+The general DPM framework we utilize consists of forward and reverse diffusions given by the following Stochastic Differential Equations (SDEs):
+
+$$
+
+\label{eq:vc_fwd_sde}
+dX_{t}=\frac{1}{2}\beta_{t}(\bar{X} - X_{t})dt + \sqrt{\beta_{t}}d\overrightarrow{W_{t}}\ ,
+
+$$
+
+$$
+
+\label{eq:vc_rev_sde}
+d\hat{X}_{t}=\left(\frac{1}{2}(\bar{X} - \hat{X}_{t}) - s_{\theta}(\hat{X}_{t}, \bar{X}, t)\right)\beta_{t}dt + \sqrt{\beta_{t}}d\overleftarrow{W_{t}}\ ,
+
+$$
+
+where $t\in [0,1]$, $\overrightarrow{W}$ and $\overleftarrow{W}$ are two independent Wiener processes in $\mathbb{R}^{n}$, $\beta_{t}$ is non-negative function referred to as *noise schedule*, $s_{\theta}$ is the score function with parameters $\theta$ and $\bar{X}$ is $n$-dimensional vector.
+
+It can be shown [^Popov2021Grad-TTS] that the forward SDE ([eq:vc_fwd_sde](#eq:vc_fwd_sde)) allows for explicit solution:
+
+$$
+
+\label{eq:vc_solution}
+\Law(X_{t}|X_{0}) = \mathcal{N}\left(e^{-\frac{1}{2}\int_{0}^{t}{\beta_{s}ds}}X_{0} + \left(1-e^{-\frac{1}{2}\int_{0}^{t}{\beta_{s}ds}}\right)\bar{X}, \left(1 - e^{-\int_{0}^{t}{\beta_{s}ds}}\right)\ide\right),
+
+$$
+
+where $\ide$ is $n\times n$ identity matrix.
+
+Thus, if noise follows linear schedule $\beta_{t}=\beta_{0} + t(\beta_{1}-\beta_{0})$ for $\beta_{0}$ and $\beta_{1}$ such that $e^{-\int_{0}^{1}{\beta_{s}ds}}$ is close to zero, then $\Law{(X_{1})}$ is close to $\mathcal{N}(\bar{X},\ide)$ which is the prior in this DPM.
+
+The reverse diffusion ([eq:vc_rev_sde](#eq:vc_rev_sde)) is trained by minimizing weighted $L_{2}$ loss:
+
+$$
+
+\label{eq:vc_training}
+\theta^{*}=\argmin_{\theta}{\mathcal{L}(\theta)}=\argmin_{\theta}{\int_{0}^{1}{\lambda_{t}\mathbb{E}_{X_{0}, X_{t}}\Vert s_{\theta}(X_{t}, \bar{X}, t) - \nabla{\log{p_{t|0}(X_{t}|X_{0})}}\Vert_{2}^{2}}}dt,
+
+$$
+
+where $p_{t|0}(X_{t}|X_{0})$ is the probability density function (pdf) of the conditional distribution ([eq:vc_solution](#eq:vc_solution)) and $\lambda_{t}=1 - e^{-\int_{0}^{t}{\beta_{s}ds}}$.
+
+The distribution ([eq:vc_solution](#eq:vc_solution)) is Gaussian, so we have
+
+$$
+
+\label{eq:vc_logp}
+\nabla\log{p_{t|0}(X_{t}|X_{0})} = -\frac{X_{t}-X_{0}e^{-\frac{1}{2}\int_{0}^{t}{\beta_{s}ds}}-\bar{X}(1-e^{-\frac{1}{2}\int_{0}^{t}{\beta_{s}ds}})}{1 - e^{-\int_{0}^{t}{\beta_{s}ds}}}.
+
+$$
+
+At training, time variable $t$ is sampled uniformly from $[0,1]$, noisy samples $X_{t}$ are generated according to the formula ([eq:vc_solution](#eq:vc_solution)) and the formula ([eq:vc_logp](#eq:vc_logp)) is used to calculate loss function $\mathcal{L}$ on these samples.
+
+Note that $X_{t}$ can be sampled without the necessity to calculate intermediate values $\{X_{s}\}_{0<s<t}$ which makes optimization task ([eq:vc_training](#eq:vc_training)) time and memory efficient.
+
+A well-trained reverse diffusion ([eq:vc_rev_sde](#eq:vc_rev_sde)) has trajectories that are close to those of the forward diffusion ([eq:vc_fwd_sde](#eq:vc_fwd_sde)), so generating data with this DPM can be performed by sampling $\hat{X}_{1}$ from the prior $\mathcal{N}(\bar{X}, \ide)$ and solving SDE ([eq:vc_rev_sde](#eq:vc_rev_sde)) backwards in time.
+
+The described above DPM was introduced by [^Popov2021Grad-TTS] for text-to-speech task and we adapt it for our purposes.
+
+We put $\bar{X}=\varphi(X_{0})$ where $\varphi$ is the encoder, i.e. $\bar{X}$ is the "average voice'' mel-spectrogram which we want to transform into that of the target voice.
+
+We condition the decoder $s_{\theta}=s_{\theta}(\hat{X}_{t},\bar{X},g_{t}(Y),t)$ on some trainable function $g_{t}(Y)$ to provide it with information about the target speaker ($Y$ stands for forward trajectories of the target mel-spectrogram at inference and the ones of the training mel-spectrogram at training).
+
+This function is a neural network trained jointly with the decoder.
+
+We experimented with three input types for this network:
+
+-  *d-only* -- the input is the speaker embedding extracted from the target mel-spectrogram $Y_{0}$ with the pre-trained speaker verification network employed in [^Jia2018Transfer];
+
+-  *wodyn* -- in addition, the noisy target mel-spectrogram $Y_{t}$ is used as input;
+
+-  *whole* -- in addition, the whole dynamics of the target mel-spectrogram under forward diffusion $\{Y_{s}|s=0.5/15,1.5/15,..,14.5/15\}$ is used as input.
+
+The decoder architecture is based on U-Net [^Ronneberger2015U-Net] and is the same as in Grad-TTS but with four times more channels to better capture the whole range of human voices.
+
+The speaker conditioning network $g_{t}(Y)$ is composed of $2$D convolutions and MLPs and described in detail in Appendix [app:h](#app:h).
+
+Its output is $128$-dimensional vector which is broadcast-concatenated to the concatenation of $\hat{X}_{t}$ and $\bar{X}$ as additional $128$ channels.
+
+### Related VC models
+
+\label{subsec:related}
+
+To the best of our knowledge, there exist two diffusion-based voice conversion models: VoiceGrad [^Kameoka2020VoiceGrad] and DiffSVC [^Liu2021DiffSVC].
+
+The one we propose differs from them in several important aspects.
+
+First, neither of the mentioned papers considers a one-shot many-to-many voice conversion scenario.
+
+Next, these models take no less than $100$ reverse diffusion steps at inference while we pay special attention to reducing the number of iterations (see Section [sec:ml_inference](#sec:ml_inference)) achieving good quality with as few as $6$ iterations.
+
+Furthermore, VoiceGrad performs voice conversion by running Langevin dynamics starting from the source mel-spectrogram, thus implicitly assuming that forward diffusion trajectories starting from the mel-spectrogram we want to synthesize are likely to pass through the neighborhood of the source mel-spectrogram on their way to Gaussian noise.
+
+Such an assumption allowing to have only one network instead of encoder-decoder architecture is too strong and hardly holds for real voices.
+
+Finally, DiffSVC performs singing voice conversion and relies on PPGs as speaker-independent speech representation.
