--- a/Models/-VC/2021.09.28_Diff-VC.md
+++ b/Models/-VC/2021.09.28_Diff-VC.md
@@ -1636,3 +1636,28 @@ Table [tab:sampling](#tab:sampling) shows that despite likelihood and FID are tw
 Also, it is worth mentioning that although $\tau=1$ is always rather a good choice, tuning this hyperparameter can lead to even better performance.
 
 One can find randomly chosen generated images for various sampling methods in Figure~[pic:cifar](#pic:cifar).
+
+## 5·Conclusion
+
+\label{sec:outro}
+
+In this paper, the novel one-shot many-to-many voice conversion model has been presented.
+
+Its encoder design and powerful diffusion-based decoder made it possible to achieve good results both in terms of speaker similarity and speech naturalness even on out-of-domain unseen speakers.
+
+Subjective human evaluation verified that the proposed model delivers scalable VC solution with competitive performance.
+
+Furthermore, aiming at fast synthesis, we have developed and theoretically justified the novel sampling scheme.
+
+The main idea behind it is to modify the general-purpose Euler-Maruyama SDE solver so as to maximize the likelihood of discrete sample paths of the forward diffusion.
+
+Due to the proposed sampling scheme, our VC model is capable of high-quality voice conversion with as few as $6$ reverse diffusion steps.
+
+Moreover, experiments on the image generation task show that all known diffusion model types can benefit from the proposed SDE solver.
+
+\bibliography{diffusion_paper}
+\bibliographystyle{iclr2022}
+
+\newpage
+
+\appendix
