--- a/Models/-VC/2021.09.28_Diff-VC.md
+++ b/Models/-VC/2021.09.28_Diff-VC.md
@@ -2504,3 +2504,31 @@ Clean target mel-spectrogram $Y_{0}$ is used to obtain $256$-dimensional speaker
 Vectors $d$, $c$ and $t'$ are concatenated (except for *d-only* input type where we concatenate only $d$ and $t'$), passed through a linear module with $512$ units followed by a non-linearity and a linear module with $128$ units.
 
 The resulting $128$-dimensional vector is the output of the speaker conditioning network $g_{t}(Y)$.
+
+## 14·Training Hyperparameters and Other Details
+
+\label{app:details}
+
+Encoders and decoders were trained with batch sizes $128$ and $32$ and Adam optimizer with initial learning rates $0.0005$ and $0.0001$ correspondingly.
+
+Encoders and decoders in VCTK models were trained for $500$ and $200$ epochs respectively; as for LibriTTS models, they were trained for $300$ and $110$ epochs.
+
+The datasets were downsampled to $22.05$kHz which was the operating rate of our VC models.
+
+VCTK recordings were preprocessed by removing silence in the beginning and in the end of utterances.
+
+To fit GPU memory, decoders were trained on random speech segments of approximately $1.5$ seconds rather than on the whole utterances.
+
+Training segments for reconstruction and the ones used as input to the speaker conditioning network $g_{t}(Y)$ were different random segments extracted from the same training utterances.
+
+Noise schedule parameters $\beta_{0}$ and $\beta_{1}$ were set to $0.05$ and $20.0$.
+
+Our VC models operated on mel-spectrograms with $80$ mel features and sampling rate $22.05$kHz.
+
+Short-Time Fourier Transform was used to calculate spectra with $1024$ frequency bins.
+
+Hann window of length $1024$ was applied with hop size $256$.
+
+For *Diff-LibriTTS* models we used simple spectral subtraction algorithm in mel domain with spectral floor parameter $\beta=0.02$ as post-processing to reduce background noise sometimes produced by these models.
+
+Noise spectrum was estimated on speech fragments automatically detected as the ones corresponding to silence in source mel-spectrogram.
