--- a/Models/-VC/2021.09.28_Diff-VC.md
+++ b/Models/-VC/2021.09.28_Diff-VC.md
@@ -2532,3 +2532,23 @@ Hann window of length $1024$ was applied with hop size $256$.
 For *Diff-LibriTTS* models we used simple spectral subtraction algorithm in mel domain with spectral floor parameter $\beta=0.02$ as post-processing to reduce background noise sometimes produced by these models.
 
 Noise spectrum was estimated on speech fragments automatically detected as the ones corresponding to silence in source mel-spectrogram.
+
+## 15·Details of AMT Tests
+
+\label{app:subj}
+
+For fair comparison with the baselines all the recordings were downsampled to $16$kHz; we also normalized their loudness.
+
+In speech naturalness tests workers chosen by geographic criterion were asked to assess the overall quality of the synthesized speech, i.e to estimate how clean and natural (human-sounding) it was.
+
+Five-point Likert scale was used: $1$ - "Bad'', $2$ - "Poor'', $3$ - "Fair'', $4$ - "Good'', $5$ - "Excellent''.
+
+Assessors were asked to wear headphones and work in a quiet environment.
+
+As for speaker similarity tests, workers were asked to assess how similar synthesized samples sounded to target speech samples in terms of speaker similarity.
+
+Assessors were asked not to pay attention to the overall quality of the synthesized speech (e.g. background noise or incorrect pronunciation).
+
+Five-point scale was used: $1$ - "Different: absolutely sure'', $2$ - "Different: moderately sure'', $3$ - "Cannot decide more same or more different'', $4$ - "Same: moderately sure'', $5$ - "Same: absolutely sure''.
+
+\end{document}
