--- a/Models/-VC/2021.09.28_Diff-VC.md
+++ b/Models/-VC/2021.09.28_Diff-VC.md
@@ -2552,3 +2552,50 @@ Assessors were asked not to pay attention to the overall quality of the synthesi
 Five-point scale was used: $1$ - "Different: absolutely sure'', $2$ - "Different: moderately sure'', $3$ - "Cannot decide more same or more different'', $4$ - "Same: moderately sure'', $5$ - "Same: absolutely sure''.
 
 \end{document}
+
+## References
+
+[^Qian2019AutoVC]: {AutoVC: Zero-Shot Voice Style Transfer With Only Autoencoder Loss}. Proceedings of the 36th International Conference on Machine Learning 2019.
+[^Qian2020F0-Consistent]: {F0-Consistent Many-to-Many Non-Parallel Voice Conversion via Conditional Autoencoder}. ICASSP 2020 - 2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2020.
+[^Nercessian2020Improved]: {Improved Zero-Shot Voice Conversion Using Explicit Conditioning Signals}. Interspeech 2020, 21st Annual Conference of the International Speech Communication Association, Virtual Event, Shanghai, China, 25-29 October 2020 2020.
+[^Chou2019One-Shot]: {One-Shot Voice Conversion by Separating Speaker and Content Representations With Instance Normalization}. Interspeech 2019, 20th Annual Conference of the International Speech Communication Association, Graz, Austria, 15-19 September 2019 2019.
+[^Lin2021FragmentVC]: {FragmentVC: Any-to-Any Voice Conversion by End-to-End Extracting and Fusing Fine-Grained Voice Fragments With Attention}. ICASSP 2021 - 2021 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2021.
+[^Ishihara2020Attention-Based]: {Attention-Based Speaker Embeddings for One-Shot Voice Conversion}. Interspeech 2020, 21st Annual Conference of the International Speech Communication Association, Virtual Event, Shanghai, China, 25-29 October 2020 2020.
+[^Liu2021Any-to-Many]: {Any-to-Many Voice Conversion With Location-Relative Sequence-to-Sequence Modeling}. IEEE/ACM Transactions on Audio, Speech, and Language Processing 2021.
+[^Wu2020Vqvc+]: {VQVC+: One-Shot Voice Conversion by Vector Quantization and U-Net Architecture}. Interspeech 2020, 21st Annual Conference of the International Speech Communication Association, Virtual Event, Shanghai, China, 25-29 October 2020 2020.
+[^Wang2021Vqmivc]: {VQMIVC: Vector Quantization and Mutual Information-Based Unsupervised Speech Representation Disentanglement for One-Shot Voice Conversion}. Proc. Interspeech 2021 2021.
+[^Luong2021Many-to-Many]: {Many-to-Many Voice Conversion Based Feature Disentanglement Using Variational Autoencoder}. Proc. Interspeech 2021 2021.
+[^Saito2018Non-Parallel]: {Non-Parallel Voice Conversion Using Variational Autoencoders Conditioned by Phonetic Posteriorgrams and D-Vectors}. 2018 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2018.
+[^Chen2021Again-Vc]: {Again-Vc: A One-Shot Voice Conversion Using Activation Guidance and Adaptive Instance Normalization}. ICASSP 2021 - 2021 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2021.
+[^Chen2021WaveGrad]: {WaveGrad: Estimating Gradients for Waveform Generation}. International Conference on Learning Representations 2021.
+[^Kong2021DiffWave]: {DiffWave: A Versatile Diffusion Model for Audio Synthesis}. International Conference on Learning Representations 2021.
+[^Popov2021Grad-Tts]: {Grad-Tts: A Diffusion Probabilistic Model for Text-to-Speech}. Proceedings of the 38th International Conference on Machine Learning, {ICML} 2021, 18-24 July 2021, Virtual Event 2021.
+[^Jeong2021Diff-Tts]: {Diff-Tts: A Denoising Diffusion Model for Text-to-Speech}. Proc. Interspeech 2021 2021.
+[^Ho2020Denoising]: {Denoising Diffusion Probabilistic Models}. Advances in Neural Information Processing Systems 33: Annual Conference on Neural Information Processing Systems 2020, NeurIPS 2020, December 6-12, 2020, Virtual 2020.
+[^Nichol2021Improved]: {Improved Denoising Diffusion Probabilistic Models}. Proceedings of the 38th International Conference on Machine Learning 2021.
+[^Song2021Denoising]: {Denoising Diffusion Implicit Models}. International Conference on Learning Representations 2021.
+[^San-Roman2021Noise]: {Noise Estimation for Generative Diffusion Models}. 
+[^Watson2021Learning]: {Learning to Efficiently Sample From Diffusion Probabilistic Models}. 
+[^Kong2021On]: {On Fast Sampling of Diffusion Probabilistic Models}. ICML Workshop on Invertible Neural Networks, Normalizing Flows, and Explicit Likelihood Models 2021.
+[^Lee2021PriorGrad]: {PriorGrad: Improving Conditional Denoising Diffusion Models With Data-Driven Adaptive Prior}. 
+[^McAuliffe2017Montreal]: {Montreal Forced Aligner: Trainable Text-Speech Alignment Using Kaldi}. Proc. Interspeech 2017 2017.
+[^Zen2019LibriTTS]: {LibriTTS: A Corpus Derived From LibriSpeech for Text-to-Speech}. Interspeech 2019.
+[^Song2021Score-Based]: {Score-Based Generative Modeling Through Stochastic Differential Equations}. International Conference on Learning Representations 2021.
+[^Jia2018Transfer]: {Transfer Learning From Speaker Verification to Multispeaker Text-to-Speech Synthesis}. Advances in Neural Information Processing Systems 31 2018.
+[^Ronneberger2015U-Net]: {U-Net: Convolutional Networks for Biomedical Image Segmentation}. Medical Image Computing and Computer-Assisted Intervention -- MICCAI 2015 2015.
+[^Kameoka2020VoiceGrad]: {VoiceGrad: Non-Parallel Any-to-Many Voice Conversion With Annealed Langevin Dynamics}. 
+[^Liu2021DiffSVC]: {DiffSVC: A Diffusion Probabilistic Model for Singing Voice Conversion}. 
+[^Kloeden1992Numerical]: {Numerical Solution of Stochastic Differential Equations}. 
+[^Liptser1978Statistics]: {Statistics of Random Processes}. 
+[^Anderson1982Reverse-Time]: {Reverse-Time Diffusion Equation Models}. Stochastic Processes and Their Applications 1982.
+[^Henry-Labordère2017Unbiased]: {Unbiased Simulation of Stochastic Differential Equations}. The Annals of Applied Probability 2017.
+[^Beskos2005Exact]: {Exact Simulation of Diffusions}. The Annals of Applied Probability 2005.
+[^Yamagishi2019Cstr]: {CSTR VCTK Corpus: English Multi-Speaker Corpus for CSTR Voice Cloning Toolkit (Version 0.92)}. 
+[^Kong2020HiFi-GAN]: {HiFi-GAN: Generative Adversarial Networks for Efficient and High Fidelity Speech Synthesis}. Advances in Neural Information Processing Systems 33: Annual Conference on Neural Information Processing Systems 2020, NeurIPS 2020, December 6-12, Virtual 2020.
+[^Baevski2020Wav2vec]: {Wav2vec 2.0: A Framework for Self-Supervised Learning of Speech Representations}. Advances in Neural Information Processing Systems 2020.
+[^Kim2021Assem-Vc]: {Assem-Vc: Realistic Voice Conversion by Assembling Modern Speech Synthesis Techniques}. 
+[^Panayotov2015Librispeech]: {Librispeech: An ASR Corpus Based on Public Domain Audio Books}. 2015 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2015.
+[^Song2021Maximum]: {Maximum Likelihood Training of Score-Based Diffusion Models}. 
+[^Hyv{{\"a}}rinen2005Estimation]: {Estimation of Non-Normalized Statistical Models by Score Matching}. Journal of Machine Learning Research 2005.
+[^Vincent2011A]: {A Connection Between Score Matching and Denoising Autoencoders}. Neural Computation 2011.
+[^Kingma2021Variational]: {Variational Diffusion Models}. 
