--- a/Models/-VC/2021.11.06_SIG-VC.md
+++ b/Models/-VC/2021.11.06_SIG-VC.md
@@ -411,3 +411,14 @@ This approach greatly reduces the trade-off between similarity and naturalness o
 Additionally, we propose the speaker information guidance mechanism that improves the speaker similarity of synthesized speech from both human's and SV systems' perspectives.
 
 The code of our proposed system is available online\footnote{https://github.com/HaydenCaffrey/SIG-VC}. 
+
+## 6·Acknowledgment
+
+This research is funded in part by the National Natural Science Foundation of China (62171207), the Fundamental Research Funds for the Central Universities (2042021kf0039), Science and Technology Program of Guangzhou City (202007030011).
+
+Many thanks for the computational resource provided by the Advanced Computing East China Sub-Center.
+
+\bibliographystyle{IEEEbib}
+
+\bibliography{mybib}
+\end{document}
