--- a/Models/-VC/2021.11.06_SIG-VC.md
+++ b/Models/-VC/2021.11.06_SIG-VC.md
@@ -1,17 +1,4 @@
-SIG-VC: A Speaker Information Guided Zero-shot Voice Conversion System for Both Human Beings and Machines
-Haozhe Zhang, Zexin Cai, Xiaoyi Qin, Ming Li
-Nowadays, as more and more systems achieve good performance in traditional voice conversion (VC) tasks, people's attention gradually turns to VC tasks under extreme conditions. In this paper, we propose a novel method for zero-shot voice conversion. We aim to obtain intermediate representations for speaker-content disentanglement of speech to better remove speaker information and get pure content information. Accordingly, our proposed framework contains a module that removes the speaker information from the acoustic feature of the source speaker. Moreover, speaker information control is added to our system to maintain the voice cloning performance. The proposed system is evaluated by subjective and objective metrics. Results show that our proposed system significantly reduces the trade-off problem in zero-shot voice conversion, while it also manages to have high spoofing power to the speaker verification system.
-Subjects:	Sound (cs.SD); Artificial Intelligence (cs.AI); Audio and Speech Processing (eess.AS)
-Cite as:	arXiv:2111.03811 [cs.SD]
- 	(or arXiv:2111.03811v3 [cs.SD] for this version)
-
-https://doi.org/10.48550/arXiv.2111.03811
-Focus to learn more
-Submission history
-From: Haozhe Zhang [view email]
-[v1] Sat, 6 Nov 2021 06:22:45 UTC (1,352 KB)
-[v2] Fri, 4 Mar 2022 12:30:53 UTC (1,352 KB)
-[v3] Sun, 2 Apr 2023 04:21:40 UTC (1,353 KB)# SIG-VC: A Speaker Information Guided Zero-Shot Voice Conversion System for Both Human Beings and Machines
+# SIG-VC: A Speaker Information Guided Zero-Shot Voice Conversion System for Both Human Beings and Machines
 
 <details>
 <summary>基本信息</summary>
@@ -28,9 +15,9 @@ From: Haozhe Zhang [view email]
   - [Github]()
   - [Demo]()
 - 文件:
-  - [ArXiv:2111.03811v1](D:\Speech\Sapphire-TTS-Collection\Models\-VC\_PDF\2021.11.06_2111.03811v1_SIG-VC__A_Speaker_Information_Guided_Zero-Shot_Voice_Conversion_System_for_Both_Human_Beings_and_Machines.pdf)
-  - [ArXiv:2111.03811v2](D:\Speech\Sapphire-TTS-Collection\Models\-VC\_PDF\2021.11.06_2111.03811v2_SIG-VC__A_Speaker_Information_Guided_Zero-Shot_Voice_Conversion_System_for_Both_Human_Beings_and_Machines.pdf)
-  - [ArXiv:2111.03811v3](D:\Speech\Sapphire-TTS-Collection\Models\-VC\_PDF\2021.11.06_2111.03811v3_SIG-VC__A_Speaker_Information_Guided_Zero-Shot_Voice_Conversion_System_for_Both_Human_Beings_and_Machines.pdf)
+  - [ArXiv:2111.03811v1](_PDF/2021.11.06_2111.03811v1_SIG-VC__A_Speaker_Information_Guided_Zero-Shot_Voice_Conversion_System_for_Both_Human_Beings_and_Machines.pdf)
+  - [ArXiv:2111.03811v2](_PDF/2021.11.06_2111.03811v2_SIG-VC__A_Speaker_Information_Guided_Zero-Shot_Voice_Conversion_System_for_Both_Human_Beings_and_Machines.pdf)
+  - [ArXiv:2111.03811v3](_PDF/2021.11.06_2111.03811v3_SIG-VC__A_Speaker_Information_Guided_Zero-Shot_Voice_Conversion_System_for_Both_Human_Beings_and_Machines.pdf)
   - [Publication] #TODO
 
 </details>
@@ -81,7 +68,7 @@ Nevertheless, most of them apply the reconstruction loss to minimize the differe
 
 In this case, it is difficult for latent representations to be robust enough for disentangled content or speaker information.
 
-We believe this might be the reason why the trade-off question mentioned in [^Chen2021Again-Vc] exists, which refers to the issue that the aforementioned systems are not very robust in synthesizing speech with both good similarity and naturalness under the zero-shot scenario. 
+We believe this might be the reason why the trade-off question mentioned in [^Chen2021Again-Vc] exists, which refers to the issue that the aforementioned systems are not very robust in synthesizing speech with both good similarity and naturalness under the zero-shot scenario.
 
 In this paper, we propose SIG-VC, a **S**peaker **I**nformation **G**uided **V**oice **C**onversion system.
 
@@ -103,7 +90,7 @@ Finally, by conditioning on the speaker information of the target speaker, we ma
 
 Our proposed system also applies the feedback loss control on the output, which is proposed by [^Cai2020From] and applied on VC in [^Du2021Optimizing].
 
-By adding this loss, the generated results of our proposed system demonstrate high spoofing capability to speaker verification systems. 
+By adding this loss, the generated results of our proposed system demonstrate high spoofing capability to speaker verification systems.
 
 To our knowledge, we are the first to propose an approach to supervise the intermediate representation in order to remove speaker information and get pure content representation.
 
@@ -115,7 +102,7 @@ Section [implementation](#implementation) exhibits the implementation details of
 
 The experimental details, along with the results, are presented in Section [sec:exp](#sec:exp).
 
-Finally, we conclude our work in Section [sec:con](#sec:con).  
+Finally, we conclude our work in Section [sec:con](#sec:con).
 
 ## 2·Proposed Methods
 
@@ -199,7 +186,7 @@ Since the parameters are shared for the two speaker information manipulators, Pr
 
 According to the experiment results in [^Yang2021Building], although the pre-trained content encoder can provide precise linguistic information, it still contains speaker information.
 
-Thus we apply the speaker information remover as shown in Figure [fig:architecture](#fig:architecture) to remove the speaker information, and ideally, we can obtain purified content information. 
+Thus we apply the speaker information remover as shown in Figure [fig:architecture](#fig:architecture) to remove the speaker information, and ideally, we can obtain purified content information.
 
 Since it is hard to directly evaluate whether the speaker information is removed or not, we propose a method to force the intermediate representation to be in the same vector space as the input acoustic feature, which is plausible for extracting speaker embedding.
 
@@ -253,7 +240,7 @@ To better control the distribution of the predicted Mel-spectrogram, we also app
 
 We denote the target Mel-spectrogram as $X$ with shape $T \times d$, where d represents the dimensionality of the Mel-spectrogram and T represents the number of frames.
 
-Then let $X_{std}$ denote a $d \times 1$ standard deviation vector where 
+Then let $X_{std}$ denote a $d \times 1$ standard deviation vector where
 
 $$
 
@@ -263,7 +250,7 @@ $$
 
 Let $\hat X_{std}$ denote the standard deviation vector for the output of PostNet.
 
-Then the standard deviation loss is defined as 
+Then the standard deviation loss is defined as
 
 $$
 
@@ -273,7 +260,7 @@ $$
 
 We also apply the loss proposed by [^Cai2020From] to the output of PostNet as the speaker reconstruction loss.
 
-Denoted the speaker embedding extracted from target Mel-spectrogram as $\boldsymbol{s}$ and the one extracted from the predicted Mel-spectrogram as $\boldsymbol{\hat{s}}$, then the speaker reconstruction loss is 
+Denoted the speaker embedding extracted from target Mel-spectrogram as $\boldsymbol{s}$ and the one extracted from the predicted Mel-spectrogram as $\boldsymbol{\hat{s}}$, then the speaker reconstruction loss is
 
 $$
 L_{spk}=1-cos<\boldsymbol{s}, \boldsymbol{\hat{s}}> \label{spk_loss}
@@ -300,7 +287,7 @@ L = L_{mid\_spk}+L_{recon}+L_{recon\_postnet}+L_{std}+\lambda \cdot L_{spk}
 
 $$
 
-where $\lambda$ is the coefficient for speaker loss. 
+where $\lambda$ is the coefficient for speaker loss.
 
 ## 3·Implementation Details
 
@@ -370,7 +357,7 @@ Comparing to the AGAIN-VC system, our proposed system achieves better naturalnes
 
 The subjective similarity score is shown in Figure [fig:mos](#fig:mos) (b), which shows that the synthesized results from our proposed model also outperform those from AGAIN-VC on the similarity to target speakers.
 
-Our demo is also available online for readers\footnote{https://haydencaffrey.github.io/sigvc/index.html}. 
+Our demo is also available online for readers\footnote{https://haydencaffrey.github.io/sigvc/index.html}.
 
 ### Speaker embedding evaluation
 
@@ -388,7 +375,7 @@ Since we incorporate ECAPA-TDNN as the speaker encoder in our proposed system, t
 
 Therefore, we also evaluate the similarity performance by another ResNet34-based SV system [^Cai2018Exploring].
 
-In this case, our proposed system also outperforms AGAIN-VC as shown in Figure [fig:cos2](#fig:cos2). 
+In this case, our proposed system also outperforms AGAIN-VC as shown in Figure [fig:cos2](#fig:cos2).
 
 ![](cheat_sv.png)
 
@@ -410,18 +397,13 @@ This approach greatly reduces the trade-off between similarity and naturalness o
 
 Additionally, we propose the speaker information guidance mechanism that improves the speaker similarity of synthesized speech from both human's and SV systems' perspectives.
 
-The code of our proposed system is available online\footnote{https://github.com/HaydenCaffrey/SIG-VC}. 
+The code of our proposed system is available online\footnote{https://github.com/HaydenCaffrey/SIG-VC}.
 
 ## 6·Acknowledgment
 
 This research is funded in part by the National Natural Science Foundation of China (62171207), the Fundamental Research Funds for the Central Universities (2042021kf0039), Science and Technology Program of Guangzhou City (202007030011).
 
 Many thanks for the computational resource provided by the Advanced Computing East China Sub-Center.
-
-\bibliographystyle{IEEEbib}
-
-\bibliography{mybib}
-\end{document}
 
 ## References
 
@@ -444,9 +426,9 @@ Many thanks for the computational resource provided by the Advanced Computing Ea
 [^Du2021Optimizing]: {Optimizing Voice Conversion Network With Cycle Consistency Loss of Speaker Identity}. 2021 IEEE Spoken Language Technology Workshop (SLT) 2021.
 [^Povey2011Kaldi]: The Kaldi Speech Recognition Toolkit. IEEE 2011 Workshop on Automatic Speech Recognition and Understanding 2011.
 [^Gr{\'e}zl2007Probabilistic]: {Probabilistic and Bottle-Neck Features for LVCSR of Meetings}. Proc. Of {ICASSP} 2007 2007.
-[^Desplanques2020Ecapa-Tdnn]: {ECAPA-TDNN: Emphasized Channel Attention, Propagation and Aggregation in TDNN Based Speaker Verification}. 
+[^Desplanques2020Ecapa-Tdnn]: {ECAPA-TDNN: Emphasized Channel Attention, Propagation and Aggregation in TDNN Based Speaker Verification}.
 [^Ren2019FastSpeech]: {FastSpeech: Fast, Robust and Controllable Text to Speech}. Advances in Neural Information Processing Systems 2019.
 [^Kumar2019MelGAN]: {MelGAN: Generative Adversarial Networks for Conditional Waveform Synthesis}. Proc. Of {NeurIPS} 2019 2019.
 [^Kingma2015Adam]: {Adam: A Method for Stochastic Optimization}. Proc. Of {ICLR} 2015 2015.
-[^Veaux2016Superseded-CSTR]: {Superseded-CSTR VCTK Corpus: English Multi-Speaker Corpus for CSTR Voice Cloning Toolkit}. 
+[^Veaux2016Superseded-CSTR]: {Superseded-CSTR VCTK Corpus: English Multi-Speaker Corpus for CSTR Voice Cloning Toolkit}.
 [^Cai2018Exploring]: {Exploring the Encoding Layer and Loss Function in End-to-End Speaker and Language Recognition System}. Proc. Of Odyssey 2018 the Speaker and Language Recognition Workshop 2018.
